--- a/components/showcase.module.scss
+++ b/components/showcase.module.scss
@@ -36,6 +36,8 @@
             z-index: 2;
             justify-content: flex-end;
             align-items: flex-start;
+            padding: 0;
+            padding-bottom: 2rem;
         }
     }
 }
